--- a/WebJecApp/templates/WebJecApp/Home.html
+++ b/WebJecApp/templates/WebJecApp/Home.html
@@ -1,70 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        
-        {% load static %}
+{% extends "WebJecApp/Base.html" %}
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Comunidad Web Jec</title>
-        <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'assets/css/ionicons.min.css' %}" >
-        <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-        <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
+{% load static %}
 
-            <!-- carousel -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
-    <link href="{% static 'WebJecApp/lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+{% block content %}
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-
-    </head>
-<body>
-   <nav  class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary" style="font-size: 40px;"><i></i>Iglesia JEC</h2>
-        </a>
-        <!--<button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon" ></span>
-        </button>-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin: 25px;" >
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse" >
-                <ul class="navbar-nav" style="font-size: 18px; padding-inline-end: 10px;" >
-                  <li class="nav-item">
-                    <a class="nav-link active"style="padding-inline-end: 20px;" aria-current="page" href="#">Comunidad</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" style="padding-inline-end: 20px;"href="#">Ministerios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" style="padding-inline-end: 20px;"href="#">Multimedia</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" style="padding-inline-end: 20px;"href="#">Misión</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" style="padding-inline-end: 20px;"href="#">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>   
-    </nav>
-
-        <section class="page-section clearfix">
+<section class="page-section clearfix">
             <div class="container">
               <div class="intro">
                 <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/banner2.jpg' %}" alt="foto">
@@ -227,22 +167,4 @@
                </div>
             </div>
          </div>
-                <div class="footer-bottom">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p>&copy; Comunidad Web Jec 2022-2023. DIOS TE BENDIGA!</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    
-    </div>
-
-    <script src="{% static 'assets/js/jquery.min.js' %}"></script>
-    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'assets/js/main.js' %}"></script>
-
-
-</body>
-  
-</html>
+         {% endblock %}                
