--- a/WebJecApp/templates/WebJecApp/Base.html
+++ b/WebJecApp/templates/WebJecApp/Base.html
@@ -46,9 +46,9 @@
                   <li class="nav-item">
                     <a class="nav-link active"style="padding-inline-end: 20px;" aria-current="page" href="{% url 'Comunidad' %}">Comunidad</a>
                   </li>
-                  <li class="nav-item">
+                  <!--<li class="nav-item">
                     <a class="nav-link" style="padding-inline-end: 20px;"href="{% url 'Mision' %}">Misión</a>
-                  </li>
+                  </li>-->
                   <!--<li class="nav-item">
                     <a class="nav-link" style="padding-inline-end: 20px;"href="{% url 'Home' %}">Multimedia</a>
                   </li>-->
