--- a/WebJecApp/templates/WebJecApp/Home.html
+++ b/WebJecApp/templates/WebJecApp/Home.html
@@ -5,17 +5,15 @@
 {% block content %}
 
 <section class="page-section clearfix">
-            <div class="container">
-              <div class="intro">
-                <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/banner2.jpg' %}" alt="foto">
-
-                <!--<div class="row">
-                    <div class="col-md-12">
-                        <a href="#" class="btn btn-banner">DEFAULT</a>
-                    </div>
-                </div>-->
+    <section id="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/banner2.jpg' %}" alt="foto">
+                </div>
             </div>
         </section>
+    
 
         <section id="one">
             <div class="container">
