--- a/WebJecApp/templates/WebJecApp/Nosotros.html
+++ b/WebJecApp/templates/WebJecApp/Nosotros.html
@@ -6,13 +6,14 @@
 
 {% block content %}
 
-
+<body  >
+    
 <section style="background-color: #f7c5b5">
     <div class="container">
         <div class="two-features">
             <div class="row">
                     <div style="text-align: center;">
-                        <h3 >Ministerios</h3>
+                        <h3 style="font-size: 40px;">Ministerios</h3>
                 </div>
             </div>
         </div>
@@ -93,7 +94,7 @@
                 </div>
              </div>
           </div>
-          <div class="col-md-4 col-sm-6"" >
+          <!--<div class="col-md-4 col-sm-6"" >
             <div id="serv_hover"  class="room">
                <div class="room_img">
                   <figure><img src="{% static 'img/logo2.jpg' %}" alt="#"/></figure>
@@ -103,12 +104,10 @@
                   <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
                </div>
             </div>
-         </div>
+         </div>-->
        </div>
     </div>
  </div>
- <!-- end our_room -->
+</body>
 
 {% endblock %}
-
-
