--- a/WebJecApp/templates/WebJecApp/Comunidad.html
+++ b/WebJecApp/templates/WebJecApp/Comunidad.html
@@ -6,109 +6,202 @@
 
 {% block content %}
 
-<body  >
-    
-<section style="background-color: #f7c5b5">
-    <div class="container">
-        <div class="two-features">
-            <div class="row">
-                    <div style="text-align: center;">
-                        <h3 style="font-size: 40px;">Ministerios</h3>
-                </div>
-            </div>
-        </div>
-    </div>
+<section id="banner">
+   <div class="container">
+       <div class="row">
+           <div class="col-md-12">
+               <h2>UNA COMUNIDAD QUE CRECE</h2>
+           </div>
+       </div>
 </section>
 
- <!-- our_room -->
- <div  class="our_room">
-    <div class="container">
-       <div class="row">
-          <div class="col-md-12">
-          </div>
-       </div>
-       <div class="row">
-          <div class="col-md-4 col-sm-6">
-             <div id="serv_hover"  class="room">
-                <div class="room_img">
-                   <figure><img src="{% static 'img/014.jpg' %}" alt="#"/></figure>
-                </div>
-                <div class="bed_room">
-                   <h3>Matrimonios</h3>
-                   <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                </div>
-             </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-             <div id="serv_hover"  class="room">
-                <div class="room_img">
-                   <figure><img src="{% static 'img/0121.jpg' %}" alt="#"/></figure>
-                </div>
-                <div class="bed_room">
-                   <h3>Jóvenes 412</h3>
-                   <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                </div>
-             </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-             <div id="serv_hover"  class="room">
-                <div class="room_img">
-                   <figure><img src="{% static 'img/0118.jpg' %}" alt="#"/></figure>
-                </div>
-                <div class="bed_room">
-                   <h3>Varones Jec</h3>
-                   <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                </div>
-             </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-             <div id="serv_hover"  class="room">
-                <div class="room_img">
-                   <figure><img src="{% static 'img/0142.jpg' %}" alt="#"/></figure>
-                </div>
-                <div class="bed_room">
-                   <h3>Mujeres Jec</h3>
-                   <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                </div>
-             </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-             <div id="serv_hover"  class="room">
-                <div class="room_img">
-                   <figure><img src="{% static 'img/018.jpg' %}" alt="#"/></figure>
-                </div>
-                <div class="bed_room">
-                   <h3>Plateados</h3>
-                   <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                </div>
-             </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-             <div id="serv_hover"  class="room">
-                <div class="room_img">
-                   <figure><img src="{% static 'img/019.jpg' %}" alt="#"/></figure>
-                </div>
-                <div class="bed_room">
-                   <h3>Club de Niños</h3>
-                   <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                </div>
-             </div>
-          </div>
-          <!--<div class="col-md-4 col-sm-6"" >
-            <div id="serv_hover"  class="room">
-               <div class="room_img">
-                  <figure><img src="{% static 'img/logo2.jpg' %}" alt="#"/></figure>
+<section id="one">
+   <div class="container">
+       <div class="one-features">
+           <div class="row">
+               <div class="col-md-8">
+                   <div class="section-highlight">
+                       <h2>BEST SPORTS HEADPHONE EVER</h2>
+                   </div>
+                   <div class="section-details">
+                       <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                       </p>
+                       <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                   </div>
                </div>
-               <div class="bed_room">
-                  <h3>Generación</h3>
-                  <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+               <div class="col-md-4">
+                   <img src="assets/images/03_headephone.png" alt="Responsive image" class="img-responsive">
                </div>
-            </div>
-         </div>-->
+           </div>
        </div>
-    </div>
- </div>
-</body>
+   </div>
+</section>
+
+<section id="two">
+   <div class="container">
+       <div class="two-features">
+           <div class="row">
+               <div class="col-md-4">
+               <img src="assets/images/04_shoe.png" alt="Responsive image" class="img-responsive">
+               </div>
+               <div class="col-md-8">
+                   <div class="section-highlight">
+                       <h2>WHY YOU LIKE OUR SHOES?</h2>
+                   </div>
+                   <div class="section-details">
+                       <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                       </p>
+                       <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </div>
+</section>
+
+<section id="three">
+   <div class="container">
+       <div class="three-features">
+           <div class="row">
+               <div class="col-md-8">
+                   <div class="section-highlight">
+                       <h2>YANKEES BASEBALL CAP</h2>
+                   </div>
+                   <div class="section-details">
+                       <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                       </p>
+                       <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <img src="assets/images/05_cap.png" alt="Responsive image" class="img-responsive">
+               </div>
+           </div>
+       </div>
+   </div>
+</section>
+
+<section id="four">
+       <div class="container">
+           <div class="four-top">
+               <div class="section-heading">
+                   <div class="title">
+                       <div class="row">
+                           <div class="col-md-12">
+                               <h2>CHECK OUR SERVICES</h2>
+                           </div>
+                       </div>
+                   </div>
+
+                   <div class="subtitle">
+                       <div class="row">                                       
+                           <div class="col-md-9 col-md-offset-1">
+                               <p>
+                                   Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urnamauris id tellus arcu.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+
+       <div class="container">
+           <div class="row">
+               <div class="col-md-6">
+                   <div class="four-features four-features-left-bottom">
+                       <div class="features-img">
+                           <img src="assets/images/07.jpg" alt="Responsive image" class="img-responsive">
+                       </div>
+                       <div class="features-content">
+                           <h3>MOUNTAIN HIKING</h3>
+                           <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                           </p>
+                           <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-6">
+                   <div class="four-features four-features-right-bottom">
+                       <img src="assets/images/08.jpg" alt="Responsive image" class="img-responsive">
+                       <div class="features-content">
+                           <h3>SHOE SERVICES</h3>
+                           <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                           </p>
+                           <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="row">
+               <div class="col-md-6">
+                   <div class="four-features four-features-left-top">
+                   <img src="assets/images/09.jpg"  alt="Responsive image" class="img-responsive">
+                       <div class="features-content">
+                           <h3>MOUNTAIN VISION</h3>
+                           <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                           </p>
+                           <a href="#" class="btn btn-learn-more">
+                           LEARN MORE <i class="ion-ios-arrow-right"></i>
+                           </a>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-6">
+                   <div class="four-features four-features-right-top">
+                       <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
+                       <div class="features-content">
+                           <h3>LIFE IN ADVENTURE</h3>
+                           <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                           </p>
+                           <a href="#" class="btn btn-learn-more">
+                           LEARN MORE <i class="ion-ios-arrow-right"></i>
+                           </a>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="row">
+               <div class="col-md-12">
+                   <a href="#" class="btn btn-expand-all">EXPAND ALL</a>
+               </div>
+           </div>
+       </div>
+</section>
+
+<section id="footer">
+   <div class="container">
+       <div class="footer-top">
+           <div class="section-heading">
+               <div class="title">
+                   <div class="row">
+                       <div class="col-md-12">
+                       <h2>GET IN TOUCH</h2>
+                       </div>
+                   </div>
+               </div>
+               <div class="subtitle">
+                   <div class="row">
+                       <div class="col-md-9 col-md-offset-1">
+                           <p>
+                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/main.js"></script>
 
 {% endblock %}
 
