--- a/WebJecApp/static/assets/css/main.css
+++ b/WebJecApp/static/assets/css/main.css
@@ -28,8 +28,8 @@ h1, h2, h3, h4, h5, h6 {
     -ms-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
     transition: all 0.9s ease-in-out;
-    /*background-image: linear-gradient(to top, rgba(46, 49, 65, 0), rgba(46, 49, 65, 1)), url(../images/07.jpg);*/
-    /*background-image: url(../images/07.jpg);*/
+    /*background-image: linear-gradient(to top, rgba(46, 49, 65, 0), rgba(46, 49, 65, 1)), url(../01 (37).jpg);*/
+    background-image: url(../images/0137.jpg);
 	background-size: auto, cover;
     background-attachment: fixed;
     background-position: center, center;
@@ -44,13 +44,14 @@ h1, h2, h3, h4, h5, h6 {
     -moz-transition: all 0.4s ease-in-out;
     -ms-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-    background-image: url(../images/banner.jpg);
-    background-size: auto, cover;
+    transition: all 0.9s ease-in-out;
+    /*background-image: linear-gradient(to top, rgba(46, 49, 65, 0), rgba(46, 49, 65, 1)), url(../images/07.jpg);*/
+    /*background-image: url(../images/07.jpg);*/
+	background-size: auto, cover;
     background-attachment: fixed;
     background-position: center, center;
     background-repeat: no-repeat;
-	padding: 10em 0 4.75em 0 ;
+	padding: 3em 0 4.75em 0 ;
 	height: 80vh;
 	color: #ffffff;	
 }
