--- a/WebJecApp/templates/WebJecApp/Comunidad.html
+++ b/WebJecApp/templates/WebJecApp/Comunidad.html
@@ -21,11 +21,11 @@
            <div class="row">
                <div class="col-md-8">
                    <div class="section-highlight">
-                       <h2>BEST SPORTS HEADPHONE EVER</h2>
+                       <h2>Actividades</h2>
                    </div>
                    <div class="section-details">
                        <p>
-                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                           Día del Niño,  Octubrillante,  Picnics,  
                        </p>
                        <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                    </div>
@@ -47,7 +47,7 @@
                </div>
                <div class="col-md-8">
                    <div class="section-highlight">
-                       <h2>WHY YOU LIKE OUR SHOES?</h2>
+                       <h2>Un solo Señor, un solo Camino y una nueva Esperanza</h2>
                    </div>
                    <div class="section-details">
                        <p>
@@ -91,7 +91,7 @@
                    <div class="title">
                        <div class="row">
                            <div class="col-md-12">
-                               <h2>CHECK OUR SERVICES</h2>
+                               <h2>Nuestro Servicio a Dios</h2>
                            </div>
                        </div>
                    </div>
@@ -100,8 +100,8 @@
                        <div class="row">                                       
                            <div class="col-md-9 col-md-offset-1">
                                <p>
-                                   Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urnamauris id tellus arcu.
-                               </p>
+                                 Por lo tanto, mis queridos hermanos, manténganse firmes e inconmovibles, progresando siempre en la obra del Señor, conscientes de que su trabajo en el Señor no es en vano. (1 Corintios 15:58)
+                               </p><br>
                            </div>
                        </div>
                    </div>
@@ -117,7 +117,7 @@
                            <img src="assets/images/07.jpg" alt="Responsive image" class="img-responsive">
                        </div>
                        <div class="features-content">
-                           <h3>MOUNTAIN HIKING</h3>
+                           <h3>Liderázgo</h3>
                            <p>
                            Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
                            </p>
@@ -129,7 +129,7 @@
                    <div class="four-features four-features-right-bottom">
                        <img src="assets/images/08.jpg" alt="Responsive image" class="img-responsive">
                        <div class="features-content">
-                           <h3>SHOE SERVICES</h3>
+                           <h3>Alabanza</h3>
                            <p>
                            Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
                            </p>
@@ -143,7 +143,7 @@
                    <div class="four-features four-features-left-top">
                    <img src="assets/images/09.jpg"  alt="Responsive image" class="img-responsive">
                        <div class="features-content">
-                           <h3>MOUNTAIN VISION</h3>
+                           <h3>Vida Discipular</h3>
                            <p>
                            Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
                            </p>
@@ -157,7 +157,7 @@
                    <div class="four-features four-features-right-top">
                        <img src="assets/images/10.jpg" alt="Responsive image" class="img-responsive">
                        <div class="features-content">
-                           <h3>LIFE IN ADVENTURE</h3>
+                           <h3>Multimedia</h3>
                            <p>
                            Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
                            </p>
@@ -176,28 +176,6 @@
        </div>
 </section>
 
-<section id="footer">
-   <div class="container">
-       <div class="footer-top">
-           <div class="section-heading">
-               <div class="title">
-                   <div class="row">
-                       <div class="col-md-12">
-                       <h2>GET IN TOUCH</h2>
-                       </div>
-                   </div>
-               </div>
-               <div class="subtitle">
-                   <div class="row">
-                       <div class="col-md-9 col-md-offset-1">
-                           <p>
-                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna.
-                           </p>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
