--- a/WebJecApp/templates/WebJecApp/Home.html
+++ b/WebJecApp/templates/WebJecApp/Home.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <section class="page-section clearfix">
-    <section id="banner">
+    <section id="banner2">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
