--- a/WebJecApp/templates/WebJecApp/Nosotros.html
+++ b/WebJecApp/templates/WebJecApp/Nosotros.html
@@ -8,12 +8,12 @@
 
 <body  >
     
-<section style="background-color: #f7c5b5">
+<section id="banner2" style="background-color: #f7c5b5">
     <div class="container">
         <div class="two-features">
             <div class="row">
                     <div style="text-align: center;">
-                        <h3 style="font-size: 40px;">Ministerios</h3>
+                        <h3 style="color: whitesmoke; font-size: 50px;">Ministerios</h3>
                 </div>
             </div>
         </div>
