--- a/WebJecApp/templates/WebJecApp/Base.html
+++ b/WebJecApp/templates/WebJecApp/Base.html
@@ -44,7 +44,10 @@
               <div class="collapse navbar-collapse" >
                 <ul class="navbar-nav" style="font-size: 18px; padding-inline-end: 10px;" >
                   <li class="nav-item">
-                    <a class="nav-link active"style="padding-inline-end: 20px;" aria-current="page" href="{% url 'Comunidad' %}">Comunidad</a>
+                    <a class="nav-link active" style="padding-inline-end: 20px;"href="{% url 'Home' %}">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"style="padding-inline-end: 20px;" href="{% url 'Comunidad' %}">Comunidad</a>
                   </li>
                   <!--<li class="nav-item">
                     <a class="nav-link" style="padding-inline-end: 20px;"href="{% url 'Mision' %}">Misión</a>
@@ -53,7 +56,7 @@
                     <a class="nav-link" style="padding-inline-end: 20px;"href="{% url 'Home' %}">Multimedia</a>
                   </li>-->
                   <li class="nav-item">
-                    <a class="nav-link" style="padding-inline-end: 20px;"href="{% url 'Nosotros' %}">Nosotros</a>
+                    <a class="nav-link" style="padding-inline-end: 20px;"href="{% url 'Nosotros' %}">Ministerios</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" style="padding-inline-end: 20px;"href="{% url 'Contacto' %}">Contacto</a>
