--- a/WebJecApp/templates/WebJecApp/Home.html
+++ b/WebJecApp/templates/WebJecApp/Home.html
@@ -148,9 +148,9 @@
                            </div>
                            <div class="col-md-12">
                               <textarea class="textarea" placeholder="Mensaje" type="type" Message="Mensaje"></textarea>
-                           </div>
+                           </div><br>
                            <div class="col-md-12">
-                              <button class="btn-send">Enviar</button>
+                            <button class="btn-send">Enviar</button><br><br><br><br>
                            </div>
                         </div>
                      </form>
