--- a/WebJecApp/templates/WebJecApp/Comunidad.html
+++ b/WebJecApp/templates/WebJecApp/Comunidad.html
@@ -55,7 +55,7 @@
                    </div>
                    <div class="section-details">
                        <p>
-                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                        "Deléitate asimismo en Jehová, Y él te concederá las peticiones de tu corazón" (Salmos 37:4).
                        </p>
                        <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                    </div>
@@ -75,7 +75,7 @@
                    </div>
                    <div class="section-details">
                        <p>
-                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.
+                           "Porque nada hay imposible para Dios" (Lucas 1:37).
                        </p>
                        <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                    </div>
@@ -117,13 +117,13 @@
            <div class="row">
                <div class="col-md-6">
                    <div class="four-features four-features-left-bottom">
-                    <div>
+                    <div class="about_img">
                         <figure><img src="{% static 'img/liderazgo 01.jpg' %}" alt="Responsive image" class="img-responsive">
                     </div>
                        <div class="features-content">
                            <h3>Liderázgo</h3>
                            <p>
-                           Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis Nunc sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla
+                            "Porque yo sé los pensamientos que tengo acerca de vosotros, dice Jehová, pensamientos de paz, y no de mal, para daros el fin que esperáis" (Jeremías 29:11).
                            </p>
                            <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
                        </div>
@@ -164,7 +164,7 @@
                <div class="col-md-6">
                    <div class="four-features four-features-right-top">
                     <div class="about_img">
-                        <figure><img src="{% static 'img/discipulado 02.jpg' %}" alt="Responsive image" class="img-responsive">
+                        <figure><img src="{% static 'img/discipulado 03.jpg' %}" alt="Responsive image" class="img-responsive">
                     </div>
                        <div class="features-content">
                            <h3>Multimedia</h3>
