--- a/WebJecApp/templates/WebJecApp/Contacto.html
+++ b/WebJecApp/templates/WebJecApp/Contacto.html
@@ -11,7 +11,7 @@
           <div class="col-md-5">
              <div class="titlepage">
                
-                <p class="margin_0">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum. </p>
+                <p class="margin_0">"Y sabemos que a los que aman a Dios, todas las cosas les ayudan a bien, esto es, a los que conforme a su propósito son llamados" (Romanos 8:28). </p>
              </div>
           </div>
           <div class="col-md-7">
